--- a/wp-content/themes/Moderna/style.css
+++ b/wp-content/themes/Moderna/style.css
@@ -6,3 +6,75 @@
     Author URI:https://www.sayadryhan.com
     version:1.0.0
 */
+
+
+#header .search{
+    display: inline-block;
+  }
+  
+  .navbar>.container .navbar-brand{
+    margin-left: 0;
+  }
+  
+  .top-bar {
+    padding: 10px 0;
+    background: #191919;
+    border-bottom: 1px solid #222;
+    line-height: 28px;
+  }
+  
+  .top-number{
+    color: #fff;
+  }
+  
+  .top-number p{
+    margin: 0
+  }
+  
+  .social{
+    text-align: right;
+  }
+  
+  .social-share{
+   display: inline-block;
+   list-style: none;
+   padding: 0;
+   margin: 0;
+  }
+  
+  ul.social-share li {
+    display: inline-block;
+  }
+  
+  ul.social-share li a {
+    display: inline-block;
+    color: #fff;
+    background: #404040;
+    width: 25px;
+    height: 25px;
+    line-height: 25px;
+    text-align: center;
+    border-radius: 2px;
+  }
+  
+  ul.social-share li a:hover {
+    background: #c52d2f;
+    color: #fff;
+  }
+  
+  .search i {
+    color: #fff;
+  }
+  
+  input.search-form{
+    background: transparent;
+    border: 0 none;
+    width: 60px;
+    padding: 0 10px;
+    color: #FFF;
+    -webkit-transition: all 400ms;
+    -moz-transition: all 400ms;
+    -ms-transition: all 400ms;
+    -o-transition: all 400ms;
+    transition: all 400ms;
+  }
